# devnetwork-hackathon

./: .dockerignore  .gitignore  docker-compose.yaml  dockerfile  readme.md
.github/workflows/: ci-cd.yml
backend/gateway/: dockerfile  go.mod  golangci-lint.yml  main.go
backend/real-time/: Cargo.toml  dockerfile
backend/real-time/src/: main.rs
backend/service/: dockerfile  main.py  pyproject.toml
backend/service/django_project/: settings.py
frontend/: dockerfile  package.json  pnpm-lock.yaml
vscode_profile/: devnetwork-hackathon.code-profile
