[package]
name = "real-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = "^0.17.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "^0.8.4"
reqwest = { version = "0.12", 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
